--- a/style.css
+++ b/style.css
@@ -1,6 +1,27 @@
-html,body{
-  width: 100%;
-  height: 100%;
+html,
+body {
+    height: 100%;
+}
+
+.carousel,
+.item,
+.active {
+    height: 100%;
+}
+
+
+.carousel-inner {
+    height: 100%;
+}
+
+.fill {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
 }
 
 .navbar-dark{
@@ -11,9 +32,13 @@ html,body{
   background:rgb(71, 71, 71);
 }
 
-.wadahcarousel{
+/*.wadahcarousel{
 	width: 100%;
   height: 100%;
+}
+*/
+.wadahcard{
+  width: 90%
 }
 
 .carousel-caption{
@@ -30,6 +55,7 @@ html,body{
 	background: url(img/bg.png) no-repeat center center;
 	width: 100%;
 	height: 300px;
+  background-attachment: fixed;
 }
 
 .sosmed a{
